# t5mp

./: pyproject.toml  readme.md
imported/: colab_run_t5_model_parallel_mlm_flax.py  run_clm_mp.py
t5mp/: configuration.py  main.py  run_t5_mlm_flax.py  t5_partitions.py  tokenizer.py
