[tool.poetry]
name = "t5mp"
version = "0.1.0"
description = ""
authors = ["Alexey Kuntsevich <alexey.kuntsevich@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jax = "^0.3.17"
datasets = "^2.4.0"
tokenizers = "^0.12.1"
transformers = "^4.22.0"
torch = "^1.12.1"
torchdata = "^0.4.1"
torchtext = "^0.13.1"
tensorboard = "^2.10.0"
click = "^8.1.3"
flax = "^0.6.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ptlm = "t5mp.main:cli"
